# tdd_kotohajime

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_resuest_template.md
.github/workflows/: quality_checks.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  tdd.rst  tdd.type.rst  tdd.zalg.rst  usage.rst
tdd/: __init__.py  cli.py
tdd/.github/: ISSUE_TEMPLATE.md
tdd/tdd/: __init__.py
tdd/type/: __init__.py  _abs_alg.py
tdd/zalg/: __init__.py  _mult.py  _sum.py
tests/: __init__.py  test_tdd.py
tests/zalg/: test_mult.py  test_sum.py
