[tool.poetry]
name = "tdd"
version = "0.1.0"
description = "tdd exercise"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
include = [
  "AUTHORS.rst",
  "CONTRIBUTING.rst",
  "HISTORY.rst",
  "tests/",
  "docs/",
]
exclude = [
  "**/__pycache__",
  "**/*.py[co]"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pandas = "^1.4.2"
click = "^8.1.3"
tox-gh-actions = "^2.9.1"

[tool.poetry.dev-dependencies]
pip = "^22.1.1"
bump2version = "^1.0.1"
wheel = "^0.37.1"
pytest = "^7.1.2"
coverage = "^6.4"
flake8 = "^4.0.1"
tox = "^3.25.0"
Sphinx = "^4.5.0"
sphinx-material = "^0.0.35"

[tool.poetry.scripts]
tdd = "tdd.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
